--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,9 @@
 
-<title>Elisha Tigah | Full-stack web developer</title>
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide"> </a>  <!--Logo -->
+    <a href="#home" class="w3-bar-item w3-button w3-wide"> </a>
+    <!--Logo -->
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
@@ -29,14 +29,13 @@
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container " id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small"  style="background-color: white">Elisha Tigah</span><br>
+    <br> <br> <br> <br> <br> <br>
+    <span class="w3-jumbo w3-hide-small" style="background-color: white">Elisha Tigah</span><br>
     <span class="w3-jumbo w3-hide-small" style="background-color: white">full stack web developer</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="background-color: white">Elisha Tigah</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="background-color: white">full stack web developer</span><br>
-    
-    <!-- <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more</a></p> -->
-    <a  class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off" href="Elisha_Tigah_Resume_2019.pdf" download>My Resume</a>
-  </div> 
+    <a class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off" href="Elisha_Tigah_Resume_2019.pdf" download>My Resume</a>
+  </div>
 </header>
 
 <!-- About Section -->
@@ -55,13 +54,13 @@
       <p class="w3-large">Commitment</p>
       <p>I am very committed to completing any project and often like to go above and beyond the call of duty</p>
     </div>
-    
+
     <div class="w3-quarter">
       <i class="fa fa-graduation-cap w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Learning</p>
       <p>I like to take on new challenges and projects so I can keep up with the latest technologies</p>
     </div>
-    
+
     <div class="w3-quarter">
       <i class="fa fa-medkit w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Mentor</p>
@@ -76,20 +75,21 @@
   <h2>My Portfolio</h2>
   <h4>Recent Projects</h4>
   <br>
-  
+
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <a href="https://churchmms.com/" target="_blank">
-          <img src="/assets/church.png" alt="Smiley face" width="400" height="300">
+
+        <a href="http://idea-board-ekt.herokuapp.com/" target="_blank">
+          <img src="/assets/idea.png" alt="Smiley face" width="400" height="300">
         </a>
-        
-        <p><strong>The ChurchMMS App</strong></p>
-        <p align="left">The ChurchMMS app allows Church administrators to send announcements through text messages to their church members.</p>
-          <p align="left">The technology stack includes:
-            <strong>Ruby on Rails, TwilioAPI, StripeAPI, CSS, JQuery, HTML5 and Bootstrap </strong></p>
-        
-        <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ptcww8/church_announcements"> Github repo </a></button></p>
+        <p><strong>The Idea Board App</strong></p>
+        <p align="left">The Idea Board app is a single page app which displays ideas in the form of square tiles. Users can add new ideas, edit and delete them. </p>
+        <br>
+        <p align="left">The technology stack includes:
+          <strong>Ruby on Rails, CSS, and React-Rails </strong></p>
+
+        <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/ideas_api"> Github repo </a></button></p>
       </div>
     </div>
 
@@ -100,14 +100,14 @@
         </a>
         <p><strong>The Movie Review App</strong></p>
         <p align="left">This is a Movie rating and review application with searching capabilities. Users can create an account and review a movie.</p>
-        
-          <p align="left">The technology stack includes:
-             <strong>Ruby on Rails, SQlite3, PostgreSQL, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
-       
+
+        <p align="left">The technology stack includes:
+          <strong>Ruby on Rails, SQlite3, PostgreSQL, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
+
         <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/movie-app-elisha"> Github repo </a></button></p>
       </div>
     </div>
-    
+
     <div class="col-sm-4">
       <div class="thumbnail">
         <a href="http://blog-app-elisha.herokuapp.com/" target="_blank">
@@ -115,21 +115,19 @@
         </a>
         <p><strong>The Blog App</strong></p>
         <p align="left">This is a blog app which allows user to view articles or create new articles by signing up. Artcicles can be viewed by category.</p>
-       
-          <p align="left">The technology stack includes:
-             <strong>Ruby on Rails, SQlite3, PostgreSQL, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
-    
+
+        <p align="left">The technology stack includes:
+          <strong>Ruby on Rails, SQlite3, PostgreSQL, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
+
         <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/blog-app"> Github repo </a></button></p>
       </div>
     </div>
-    
+  </div>
 
-     </div>
-    
-    
-    
-    <div class="row text-center slideanim">
-    
+
+
+  <div class="row text-center slideanim">
+
     <div class="col-sm-4">
       <div class="thumbnail">
         <a href="http://notebook-app-elisha.herokuapp.com/" target="_blank">
@@ -137,30 +135,30 @@
         </a>
         <p><strong>The Notebook App</strong></p>
         <p align="left">The notebook app allows users to view and create notes by signing up. User can see when a note was created.</p>
-        
-          <p align="left">The technology stack includes:
-             <strong>Ruby on Rails, SQlite3, PostgreSQL, CSS, JQuery, HTML5, HAML and Bootstrap </strong></p>
-       
+
+        <p align="left">The technology stack includes:
+          <strong>Ruby on Rails, SQlite3, PostgreSQL, CSS, JQuery, HTML5, HAML and Bootstrap </strong></p>
+
         <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/notebook-app-elisha"> Github repo </a></button></p>
       </div>
     </div>
-      
-      
-      <div class="col-sm-4">
+
+
+    <div class="col-sm-4">
       <div class="thumbnail">
         <a href="http://appointments-app-elisha.herokuapp.com/" target="_blank">
           <img src="/assets/appointment.png" alt="Smiley face" width="400" height="300">
         </a>
         <p><strong>The Appointments App</strong></p>
         <p align="left">The appointment app is designed to keep track of appointments with multiple clients in multiple locations.</p>
-    
-          <p align="left">The technology stack includes:
-             <strong>Ruby on Rails, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
-       
+
+        <p align="left">The technology stack includes:
+          <strong>Ruby on Rails, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
+
         <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/rails-appointment"> Github repo </a></button></p>
       </div>
     </div>
-    
+
     <div class="col-sm-4">
       <div class="thumbnail">
         <a href="#" target="_blank">
@@ -168,52 +166,36 @@
         </a>
         <p><strong>The Todo List API App</strong></p>
         <p align="left">This is a Todo list API where users can manage their to-do lists and todo items.</p>
-        
-          <p align="left">The technology stack includes:
-            <strong>Ruby on Rails, JWT, Serializers, API Versioning and Pagination </strong></p>
-     
+
+        <p align="left">The technology stack includes:
+          <strong>Ruby on Rails, JWT, Serializers, API Versioning and Pagination </strong></p>
+
         <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/todo-api"> Github repo </a></button></p>
       </div>
     </div>
-      </div>
+  </div>
 
-    <div class="row text-center slideanim">  
+  <div class="row text-center slideanim">
+
     <div class="col-sm-4">
       <div class="thumbnail">
-        
-        <a href="#" target="_blank">
-          <img src="/assets/idea.png" alt="Smiley face" width="400" height="300">
+        <a href="https://churchmms.com/" target="_blank">
+          <img src="/assets/church.png" alt="Smiley face" width="400" height="300">
         </a>
-        <p><strong>The Idea Board App</strong></p>
-        <p align="left">The Idea Board app is a single page app which displays ideas in the form of square tiles. Users can add new ideas, edit and delete them. </p>
-        <br>
-          <p align="left">The technology stack includes:
-            <strong>Ruby on Rails, CSS, and React-Rails </strong></p>
-       
-        <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/ideas_api"> Github repo </a></button></p>
+
+        <p><strong>The ChurchMMS App</strong></p>
+        <p align="left">The ChurchMMS app allows Church administrators to send announcements through text messages to their church members.</p>
+        <p align="left">The technology stack includes:
+          <strong>Ruby on Rails, TwilioAPI, StripeAPI, CSS, JQuery, HTML5 and Bootstrap </strong></p>
+
+        <p><button class="w3-button w3-light-grey w3-block"><a href="https://churchmms.com/"> Link </a></button></p>
       </div>
     </div>
-    </div>
-
   </div>
 
-
-
-
-
-
-
-
-
-
-<!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
 </div>
+
+
 
 
 <!-- Contact Section -->
@@ -230,34 +212,33 @@
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <p >Elisha Tigah &copy;</a></p>
+  <p>Elisha Tigah &copy;</a>
+  </p>
 </footer>
- 
+
 <script>
-// Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
-
-
-// Toggle between showing and hiding the sidebar when clicking the menu icon
-var mySidebar = document.getElementById("mySidebar");
-
-function w3_open() {
-  if (mySidebar.style.display === 'block') {
-    mySidebar.style.display = 'none';
-  } else {
-    mySidebar.style.display = 'block';
+  // Modal Image Gallery
+  function onClick(element) {
+    document.getElementById("img01").src = element.src;
+    document.getElementById("modal01").style.display = "block";
+    var captionText = document.getElementById("caption");
+    captionText.innerHTML = element.alt;
   }
-}
 
-// Close the sidebar with the close button
-function w3_close() {
+
+  // Toggle between showing and hiding the sidebar when clicking the menu icon
+  var mySidebar = document.getElementById("mySidebar");
+
+  function w3_open() {
+    if (mySidebar.style.display === 'block') {
+      mySidebar.style.display = 'none';
+    } else {
+      mySidebar.style.display = 'block';
+    }
+  }
+
+  // Close the sidebar with the close button
+  function w3_close() {
     mySidebar.style.display = "none";
-}
+  }
 </script>
-
-
